gradle exec task instead of jar