@@ -4,9 +4,7 @@ BUILD_SCRIPT="$(pwd)/$(dirname $0)/build.sh"
 while true
 do
   "$BUILD_SCRIPT"
-	# The ParNewGC only has marginally better YoungGen collection time at the expense of MT overhead.
-	# -XX:+UseParNewGC -XX:ConcGCThreads=4 -XX:ParallelGCThreads=4
-	java -server -Xmx280M -XX:NewSize=80M -XX:+UseSerialGC -jar -Djava.util.concurrent.ForkJoinPool.common.parallelism=16 build/libs/mc-proxy.jar
+	./gradlew run
 	echo "Restarting. Press Ctrl+C to stop"
 	sleep 3
 done
